[Internal] Binance tokenlist update changes (#5377)
* Update tokenlist version and timestamp if needed before save, move assetID functions to common asset.ts.

* Lint fixes

Co-authored-by: Catenocrypt <catenocrypt@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "bignumber.js": "^9.0.0"
   },
   "dependencies": {
-    "codecov": "^3.7.2"
+    "codecov": "^3.7.2",
+    "jsondiffpatch": "^0.4.1"
   },
   "jest": {
     "setupFilesAfterEnv": [
