[Internal] Tokenlist pairs update: Only manual update; use exclude/include config; no tokenlist_base (#5451)
* Force include and exclude implementation.

* Rename update to updateAuto

* UpdateManual hooks

* UpdateManual hook fix

* Update existing tokenlist.json file, use exclude/include config.

* Force include only pairs against the main currency.

* PS config adjustment

* Remove tokenlist_base files

* Lint fix

* Remove all pairs first.

Co-authored-by: Catenocrypt <catenocrypt@users.noreply.github.com>

--- a/.github/workflows/periodic-update.yml
+++ b/.github/workflows/periodic-update.yml
@@ -5,7 +5,7 @@ on:
     - cron:  '0 7,19 * * *'
   workflow_dispatch:
 jobs:
-  periodic-update:
+  periodic-auto-update:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,7 +18,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Run scripts
-        run: npm run update
+        run: npm run updateAuto
       - name: Show update result (diff)
         if: success()
         run: |
